--- a/TODO
+++ b/TODO
@@ -9,9 +9,11 @@ make text format more human friendly
 i.e.  sets, lists, dicts -- that are direct childs of a struct element are
 migrated to the struct's level. For example, let's suppose we have a spec like
 
-    Person: dict for (p d y) (Person p n y)
-        pid: value p
-        name: value n
+    Person: dict for (p n y) (Person p n y)
+        _key_: value p
+        _val_: struct
+            name: value n
+            yearofbirth: value y
 
 and a dataset with the following two persons:
 
@@ -28,13 +30,13 @@ The outermost level is a struct. It contains only the field Person, which is a
 dict. We would rather like to write
 
     Person john
-        pid john
         name [John Doe]
+        yearofbirth 1970
     
     Person jane
-        pid jane
         name [Jane Dane]
+        yearofbirth 1984
 
 In other words, the idea is to exploit the fact that a struct hast only one
-value per field name to eliminiate a level of indentation and eliminate the
-pseudo-field "value".
+value per field name, to eliminiate a level of indentation, and to eliminate
+the pseudo-field "value".
